Changelog: - Fixed display issue by adding a scrollbar - Changed styling to look more familier

--- a/styles/map-queries.less
+++ b/styles/map-queries.less
@@ -5,9 +5,17 @@
 @import "ui-variables";
 
 .map-queries {
+  height: 500px;
+  overflow: auto;
 }
 
 .query-list div {
-    cursor: pointer;
-    padding: 5px 0px;
+  cursor: pointer;
+  padding: 5px 0px;
+}
+
+.search-input {
+  width: 98%;
+  background: transparent;
+  border: 2px solid rgb(81,145,186);
 }
